# scikit-image

./: .travis.yml  setup.cfg
doc/examples/filters/: plot_nonlocal_means.py
doc/examples/transform/: plot_rescale.py
doc/release/: release_dev.rst
skimage/_shared/: utils.py
skimage/_shared/tests/: test_utils.py
skimage/feature/: register_translation.py
skimage/filters/: _window.py
skimage/measure/tests/: test_fit.py
skimage/registration/tests/: test_masked_phase_cross_correlation.py
skimage/restoration/: _denoise.py  _nl_means_denoising.pyx  deconvolution.py  fast_exp.h  non_local_means.py  setup.py  uft.py
skimage/restoration/tests/: test_denoise.py
skimage/segmentation/: _slic.pyx  slic_superpixels.py
viewer_examples/viewers/: image_viewer_multi.py
