[tool:pytest]
python_files=benchmark_*.py test_*.py
python_classes=Test* *Suite
python_functions=time_* test_* peakmem_*
filterwarnings =
    error
    ignore::DeprecationWarning
    ignore::FutureWarning
    ignore::numpy.VisibleDeprecationWarning
    ignore::pytest.PytestUnraisableExceptionWarning
[run]
omit= */tests/*
[metadata]
license_file = LICENSE.txt
